gatekeeper/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx
